--- a/web-server/Cargo.toml
+++ b/web-server/Cargo.toml
@@ -11,3 +11,4 @@ sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", 
 time = { version = "0.3", features = ["serde"] }
 futures = "0.3.31"
 mongodb = "3.2.5"
+dotenv = "0.15.0"
