--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^7.3.1",
     "@mui/x-date-pickers": "^8.10.2",
     "dayjs": "^1.11.13",
+    "dotenv": "^17.2.2",
+    "firebase": "^12.2.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
